# docs/swagger.json
@@ -29,7 +29,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginUserResponse"
+                            "$ref": "#/definitions/dto.SuccessUserAndTokenResponse"
                         }
                     },
                     "400": {
@@ -69,7 +69,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.LogoutResponse"
+                            "$ref": "#/definitions/dto.SuccessEmptyResponse"
                         }
                     },
                     "401": {
@@ -103,7 +103,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.LogoutAllResponse"
+                            "$ref": "#/definitions/dto.SuccessEmptyResponse"
                         }
                     },
                     "401": {
@@ -137,7 +137,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.RefreshTokenResponse"
+                            "$ref": "#/definitions/dto.SuccessTokenResponse"
                         }
                     },
                     "401": {
@@ -176,7 +176,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterUserResponse"
+                            "$ref": "#/definitions/dto.SuccessUserAndTokenResponse"
                         }
                     },
                     "400": {
@@ -187,6 +187,40 @@
                     },
                     "409": {
                         "description": "User already exists",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns authenticated user profile information",
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get current user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.SuccessUserResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -238,70 +272,6 @@
                 }
             }
         },
-        "dto.LoginUserResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/dto.UserAndTokenResponse"
-                },
-                "error": {
-                    "type": "string",
-                    "example": ""
-                },
-                "is_success": {
-                    "type": "boolean",
-                    "example": true
-                }
-            }
-        },
-        "dto.LogoutAllResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/dto.EmptyData"
-                },
-                "error": {
-                    "type": "string",
-                    "example": ""
-                },
-                "is_success": {
-                    "type": "boolean",
-                    "example": true
-                }
-            }
-        },
-        "dto.LogoutResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/dto.EmptyData"
-                },
-                "error": {
-                    "type": "string",
-                    "example": ""
-                },
-                "is_success": {
-                    "type": "boolean",
-                    "example": true
-                }
-            }
-        },
-        "dto.RefreshTokenResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/dto.TokenResponse"
-                },
-                "error": {
-                    "type": "string",
-                    "example": ""
-                },
-                "is_success": {
-                    "type": "boolean",
-                    "example": true
-                }
-            }
-        },
         "dto.RegisterUserRequest": {
             "type": "object",
             "required": [
@@ -329,11 +299,59 @@
                 }
             }
         },
-        "dto.RegisterUserResponse": {
+        "dto.SuccessEmptyResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.EmptyData"
+                },
+                "error": {
+                    "type": "string",
+                    "example": ""
+                },
+                "is_success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "dto.SuccessTokenResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.TokenResponse"
+                },
+                "error": {
+                    "type": "string",
+                    "example": ""
+                },
+                "is_success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "dto.SuccessUserAndTokenResponse": {
             "type": "object",
             "properties": {
                 "data": {
                     "$ref": "#/definitions/dto.UserAndTokenResponse"
+                },
+                "error": {
+                    "type": "string",
+                    "example": ""
+                },
+                "is_success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "dto.SuccessUserResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.UserResponse"
                 },
                 "error": {
                     "type": "string",
@@ -372,6 +390,10 @@
         "dto.UserResponse": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string",
+                    "example": "2025-12-15T09:00:00Z"
+                },
                 "display_name": {
                     "type": "string",
                     "example": "John Doe"
