# internal/http/servers/api/login_user.go
@@ -12,7 +12,7 @@ import (
 // @Summary      Login user
 // @Tags         auth
 // @Param        request body dto.LoginUserRequest true "Login credentials"
-// @Success      200 {object} dto.LoginUserResponse
+// @Success      200 {object} dto.SuccessUserAndTokenResponse
 // @Failure      400 {object} dto.ErrorResponse "Invalid request data"
 // @Failure      401 {object} dto.ErrorResponse "Invalid credentials"
 // @Failure      500 {object} dto.ErrorResponse "Internal server error"
