# internal/http/servers/api/logout_user.go
@@ -1,10 +1,9 @@
 package api
 
 import (
-	"errors"
-
 	"github.com/gin-gonic/gin"
 
+	derrors "github.com/KlimKlimKlimKlim/trossage-backend/internal/errors"
 	"github.com/KlimKlimKlimKlim/trossage-backend/internal/http/middlewares"
 	"github.com/KlimKlimKlimKlim/trossage-backend/internal/http/response"
 )
@@ -14,14 +13,14 @@ import (
 // @Description  Revokes current refresh token and ends session on this device
 // @Tags         auth
 // @Security     BearerAuth
-// @Success      200 {object} dto.LogoutResponse
+// @Success      200 {object} dto.SuccessEmptyResponse
 // @Failure      401 {object} dto.ErrorResponse "Invalid or expired refresh token"
 // @Failure      500 {object} dto.ErrorResponse "Internal server error"
 // @Router       /auth/logout [post]
 func (s *state) logoutUser(ctx *gin.Context) {
 	tokenID, ok := middlewares.GetTokenID(ctx)
 	if !ok {
-		response.HandleError(ctx, errors.New("token_id is empty"))
+		response.HandleError(ctx, derrors.ErrTokenIDIsEmpty)
 		return
 	}
 
