# internal/http/servers/api/refresh_tokens.go
@@ -1,11 +1,10 @@
 package api
 
 import (
-	"errors"
-
 	"github.com/gin-gonic/gin"
 
 	"github.com/KlimKlimKlimKlim/trossage-backend/internal/dto"
+	derrors "github.com/KlimKlimKlimKlim/trossage-backend/internal/errors"
 	"github.com/KlimKlimKlimKlim/trossage-backend/internal/http/middlewares"
 	"github.com/KlimKlimKlimKlim/trossage-backend/internal/http/response"
 )
@@ -15,20 +14,20 @@ import (
 // @Description  Generates new access and refresh tokens using valid refresh token
 // @Tags         auth
 // @Security     BearerAuth
-// @Success      200 {object} dto.RefreshTokenResponse
+// @Success      200 {object} dto.SuccessTokenResponse
 // @Failure      401 {object} dto.ErrorResponse "Invalid or expired refresh token"
 // @Failure      500 {object} dto.ErrorResponse "Internal server error"
 // @Router       /auth/refresh [post]
 func (s *state) refreshToken(ctx *gin.Context) {
 	userID, ok := middlewares.GetUserID(ctx)
 	if !ok {
-		response.HandleError(ctx, errors.New("user_id is empty"))
+		response.HandleError(ctx, derrors.ErrUserIDIsEmpty)
 		return
 	}
 
 	tokenID, ok := middlewares.GetTokenID(ctx)
 	if !ok {
-		response.HandleError(ctx, errors.New("token_id is empty"))
+		response.HandleError(ctx, derrors.ErrTokenIDIsEmpty)
 		return
 	}
 
